--- a/i18n/lang/en.json
+++ b/i18n/lang/en.json
@@ -8,9 +8,9 @@
     "Report": "Report",
     "Services": "Services",
     "Brands": "Brands",
-    "Cars": "Cars",
-    "Drivers": "Drivers",
-    "Couples": "Couples",
+    "Motorcycles": "Motorcycles",
+    "Clients": "Clients",
+    "Motorcycles(on real time)": "Motorcycles(on real time)",
     "Free Cover": "Free Cover",
     "Others": "Others",
     "District": "District",
@@ -20,14 +20,14 @@
     "Tour group": "Tour group",
     "Users": "Users",
     "User": "User",
-    "An effective bus": "An effective bus",
+    "An efficient transport": "An efficient transport",
     "Back": "Back",
     "Insert": "Insert",
     "Access control":"Access control",
     "Login":"Login",
     "Sign Out":"Sign Out",
     "Element Successfully Deleted":"Element Successfully Deleted",
-    "Top 3 groups activity":"Top 3 groups activity",
+    "List of clients in breach of contract":"List of clients in breach of contract",
     "Top 5 drivers activity":"Top 5 drivers activity",
     "Top 3 countries":"Top 3 countries",
     "Free cover drivers":"Free cover drivers",
