--- a/i18n/lang/es.json
+++ b/i18n/lang/es.json
@@ -9,9 +9,9 @@
   "Reports": "Reportes",
   "Services": "Servicios",
   "Brands": "Marcas",
-  "Cars": "Coches",
-  "Drivers": "Conductores",
-  "Couples": "Parejas",
+  "Motorcycles": "Motos",
+  "Clients": "Clientes",
+  "Motorcycles(on real time)": "Motos(en tiempo real)",
   "Free Cover": "Cubre franco",
   "Others": "Otros",
   "District": "Distrito",
@@ -21,7 +21,7 @@
   "Tour group": "Grupo",
   "Users": "Usuarios",
   "User": "Usuario",
-  "An effective bus": "Su transporte efectivo",
+  "An efficient transport": "Su transporte eficiente",
   "Back": "Atrás",
   "Insert": "Insertar",
   "Access control": "Control de Acceso",
